src = [
  'about-dialog-1',
  'about-dialog-2',
  'action-bar',
  'app-chooser-button',
  'app-chooser-dialog',
  'app-chooser-widget',
  'application-window',
  'application',
  'aspect-frame',
  'assistant',
  'box',
  'builder',
  'button-box',
  'button',
  'calendar',
  'check-button',
  'check-menu-item',
  'clipboard',
  'color-button',
  'color-chooser-dialog',
  'color-chooser-widget',
  'combo-box-text',
  'combo-box',
  'css-provider',
  'dialog-1',
  'dialog-2',
  'drawing-area',
  'entry-completion',
  'entry',
  'event-box',
  'expander',
  'file-chooser-button',
  'file-chooser-dialog',
  'file-chooser-native',
  'file-chooser-widget',
  'fixed',
  'flow-box',
  'font-button',
  'font-chooser-dialog',
  'font-chooser-widget',
  'frame',
  'gesture-drag',
  'glarea',
  'grid-1',
  'grid-2',
  'grid-3',
  'header-bar',
  'image-1',
  'image-2',
  'info-bar',
  'label',
  'level-bar',
  'link-button',
  'list-box',
  'message-dialog',
  'notebook',
  'overlay',
  'paned',
  'popover',
  'progress-bar',
  'radio-button',
  'revealer',
  'scale-button',
  'scale',
  'scrolled-window',
  'search-entry',
  'spin-button',
  'spinner',
  'stack-1',
  'stack-2',
  'statusbar',
  'switch',
  'text-view',
  'toggle-button',
  'toolbar',
  'tooltip',
  'tree-view',
  'window'
]

foreach name : src
  if name == 'glarea'
    executable(name, name + '.c',
      dependencies: [ gtk3, epoxy, m ],
      c_args: [ '-std=c11' ],
    )
  else
    executable(name, name + '.c',
      dependencies: gtk3,
      c_args: [ '-std=c11' ],
    )
  endif
endforeach