configure_file(
  input: 'builder-1.lua.in',
  output: 'builder-1.lua',
  configuration: builderConf
)

configure_file(
  input: 'builder-2.lua.in',
  output: 'builder-2.lua',
  configuration: builderConf
)

configure_file(
  input: 'css-provider.lua.in',
  output: 'css-provider.lua',
  configuration: cssConf
)

configure_file(
  input: 'image-1.lua.in',
  output: 'image-1.lua',
  configuration: imageConf
)